# expense_type_classifier

./: .gitignore  main.py  mypy.ini  pyproject.toml
expense_type_classifier/: main.py
scripts/: expense_type_classification
src/expense_type_classifier/: main.py
