[project]
name = "expense_type_classifier"
version = "0.1.0"
description = "type classifier for expenses"
authors = [{ name="Sohei.Suzuki", email="s.s1008@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "joblib>=1.2.0",
    "gspread>=6.0.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "platformdirs>=4.0.0",
    "google-auth>=2.20.0",
    "janome>=0.4.0",
    "scikit-learn>=1.5.0",
]

[project.scripts]
expense_type_classifier = "expense_type_classifier.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

